--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,4 +29,5 @@ actix-web = "4.4.1"
 rand = "0.8.5"
 reqwest = { version = "0.11.23", features = ["json"] }
 serde = { version = "1.0.195", features = ["derive"] }
+serde_json = "1.0.111"
 tokio = { version = "1.35.1", features = ["full"] }
