feat: oauth code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@
 
 
 [workspace]
-members = ["./bin/temp"]
+members = ["./bin/temp", "bin/temp"]
 [package]
 name = "minecraft-essentials"
 version = "0.1.0"
