--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,20 +13,27 @@
 #* along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 
-[workspace]
-members = ["./bin/temp", "bin/temp"]
+[build]
+# Anything for build
+
+
 [package]
 name = "minecraft-essentials"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[[bin]]
+name = "minecraft-essentials"
+path = "src/main.rs"
+
 
 [dependencies]
 actix-web = "4.4.1"
 anyhow = "1.0.79"
 base64 = "0.21.7"
 colored = "2.1.0"
+dotenv = "0.15.0"
 rand = "0.8.5"
 reqwest = { version = "0.11.23", features = ["json"] }
 ring = "0.17.7"
