--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ actix-web = "4.4.1"
 anyhow = "1.0.79"
 base64 = "0.21.7"
 colored = "2.1.0"
-dotenv = "0.15.0"
+dotenv-vault = "0.1.1"
 rand = "0.8.5"
 reqwest = { version = "0.11.23", features = ["json"] }
 ring = "0.17.7"
