--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,16 +24,13 @@ path = "src/main.rs"
 
 [dependencies]
 actix-web = "4.5.1"
-anyhow = "1.0.79"
 base64 = "0.21.7"
-colored = "2.1.0"
 dotenv-vault = "0.1.1"
 rand = "0.8.5"
 reqwest = { version = "0.11.24", features = ["json"] }
-ring = "0.17.7"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
-sha2 = "0.10.8"
+thiserror = "1.0.56"
 tokio = { version = "1.36.0", features = ["full"] }
 
 [lints.rust]
