chore: made rust analyzer to have the renew feature

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "editor.tokenColorCustomizations": {
-        "comments": "",
-        "textMateRules": []
-    }
+    "rust-analyzer.cargo.features": ["renew"]
 }
