--- a/.github/workflows/deploy-crate.yml
+++ b/.github/workflows/deploy-crate.yml
@@ -17,6 +17,9 @@ jobs:
       - uses: actions/checkout@master
       - name: Run tests
         run: cargo test --verbose
+        env:
+          Client_ID: ${{secrets.ClientID}}
+          Client_Secret: ${{secrets.ClientSecret}}
  publish:
     needs: ["test"]
     runs-on: ubuntu-latest
