--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,3 +16,6 @@ jobs:
       - uses: actions/checkout@master
       - name: Run tests
         run: cargo test --verbose
+        env:
+          Client_ID: ${{secrets.ClientID}}
+          Client_Secret: ${{secrets.ClientSecret}}
