--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,5 +35,7 @@ thiserror = "1.0.56"
 tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "sync"] }
 
 [features]
+default = ["oauth"]
 discordrpc = []
 renew = []
+oauth = []
