--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,16 +17,11 @@ readme = "README.md"
 repository = "https://github.com/minecraft-essentials/minecraft-essentials"
 
 
-[[bin]]
-name = "minecraft-essentials"
-path = "src/main.rs"
-
-
 [dependencies]
 actix-web = "4.5.1"
 base64 = "0.21.7"
 displaydoc = "0.2.4"
-dotenv-vault = "0.1.1"
+dotenv = "0.15.0"
 rand = "0.8.5"
 reqwest = { version = "0.11.24", features = ["json"] }
 serde = { version = "1.0.196", features = ["derive"] }
@@ -35,7 +30,8 @@ thiserror = "1.0.56"
 tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "sync"] }
 
 [features]
-default = ["oauth"]
+default = ["oauth", "devicecode"]
+devicecode = []
 discordrpc = []
 renew = []
 oauth = []
