--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 thiserror = "1.0.56"
 tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "sync"] }
+ring = { version = "0.17.8", optional = true}
 
 [features]
 default = ["oauth", "devicecode"]
@@ -35,3 +36,4 @@ devicecode = []
 discordrpc = []
 renew = []
 oauth = []
+minecraft-auth = ["dep:ring"]
