--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-authors = ["Eveeifyeve <eveeg1971@gmail.com>"]
 name = "minecraft-essentials"
-keywords = ["Minecraft", "MinecraftClient"]
-description = "A Package that gives all Minecraft client launchers essentials."
-license-file = "LICENSE"
-documentation = "https://docs.rs/minecraft-essentials"
 version = "0.2.9"
-edition = "2021"
+keywords = ["Minecraft", "MinecraftClient"]
+authors = ["Eveeifyeve <eveeg1971@gmail.com>"]
+description = "A Package that gives all Minecraft client launchers essentials."
 homepage = "https://minecraft-essentials.github.io"
-readme = "README.md"
 repository = "https://github.com/minecraft-essentials/minecraft-essentials"
+documentation = "https://docs.rs/minecraft-essentials"
+license-file = "LICENSE"
+edition = "2021"
+
 
 [build]
 rustdocflags = ["--theme=ayu"]
@@ -18,6 +18,7 @@ rustdocflags = ["--theme=ayu"]
 [[bin]]
 name = "cargo-minecraft-essentials"
 path = "src/main.rs"
+
 
 
 [dependencies]
@@ -40,7 +41,7 @@ ring = { version = "0.17.8", optional = true }
 hex = { version = "0.4.3", optional = true }
 
 # CLI
-clap = { version = "4.5.1", optional = true }
+clap = { version = "4.5.1", optional = true, features = ["derive"] }
 
 
 [dev-dependencies]
