--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,59 @@
-[workspace]
-members = ["crates/core", "crates/javascript", "crates/python", "crates/tauri-plugin"]
-resolver = "2"
+[package]
+name = "minecraft-essentials"
+version = "0.2.9"
+keywords = ["Minecraft", "MinecraftClient"]
+authors = ["Eveeifyeve <eveeg1971@gmail.com>"]
+description = "A Package that gives all Minecraft client launchers essentials."
+homepage = "https://minecraft-essentials.github.io"
+repository = "https://github.com/minecraft-essentials/minecraft-essentials"
+documentation = "https://docs.rs/minecraft-essentials"
+license-file = "LICENSE"
+edition = "2021"
+
+
+[build]
+rustdocflags = ["--theme=ayu"]
+
+
+[[bin]]
+name = "minecraft-essentials"
+path = "src/main.rs"
+
+
+
+[dependencies]
+reqwest = { version = "0.11.24", features = ["json"], optional = true }
+serde = { version = "1.0.196", features = ["derive"], optional = true }
+serde_json = { version = "1.0.113", optional = true }
+serde_urlencoded = { version = "0.7.1", optional = true }
+tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "sync"]}
+
+# Hashing SHA256
+base64 = { version = "0.21.7", optional = true }
+rand = { version = "0.8.5", optional = true }
+
+# Error Handling
+thiserror = "1.0.56" 
+displaydoc = "0.2.4"
+
+# Hashing SHA1
+ring = { version = "0.17.8", optional = true }
+hex = { version = "0.4.3", optional = true }
+
+# CLI
+clap = { version = "4.5.1", optional = true, features = ["derive"]}
+
+
+[dev-dependencies]
+dotenv = { version = "0.15.0"}
+
+
+[features]
+default = ["oauth", "devicecode", "cli"]
+devicecode = ["dep:reqwest", "dep:serde", "dep:serde_json"]
+oauth = ["dep:reqwest", "dep:serde", "dep:serde_json","dep:rand", "dep:serde_urlencoded"]
+minecraft-auth = ["dep:ring", "dep:hex"]
+discordrpc = []
+renew = []
+cli = ["default", "dep:clap", "minecraft-auth"]
+serde_urlencoded = ["dep:serde_urlencoded"]
