--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ reqwest = { version = "0.11.24", features = ["json"], optional = true }
 serde = { version = "1.0.196", features = ["derive"], optional = true }
 serde_json = { version = "1.0.113", optional = true }
 serde_urlencoded = { version = "0.7.1", optional = true }
-tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "sync"]}
+tokio = { version = "*", features = ["rt-multi-thread", "macros", "sync"]}
 
 # Hashing SHA256
 base64 = { version = "0.21.7", optional = true }
