--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,50 +10,38 @@ documentation = "https://docs.rs/minecraft-essentials"
 license-file = "LICENSE"
 edition = "2021"
 
-
 [build]
 rustdocflags = ["--theme=ayu"]
-
 
 [[bin]]
 name = "minecraft-essentials"
 path = "src/main.rs"
 
-
+[package.metadata.binstall]
+pkg-url = "{ repo }/releases/download/v{ version }/{ name }-cli"
+bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
+pkg-fmt = "tgz"
 
 [dependencies]
+# Core dependencies
 reqwest = { version = "0.11.24", features = ["json"], optional = true }
 serde = { version = "1.0.196", features = ["derive"], optional = true }
 serde_json = { version = "1.0.113", optional = true }
 serde_urlencoded = { version = "0.7.1", optional = true }
 tokio = { version = "*", features = ["rt-multi-thread", "macros", "sync"]}
 
-# Hashing SHA256
+# Additional dependencies
 base64 = { version = "0.21.7", optional = true }
 rand = { version = "0.8.5", optional = true }
-
-# Error Handling
-thiserror = "1.0.56" 
-displaydoc = "0.2.4"
-
-# Hashing SHA1
 ring = { version = "0.17.8", optional = true }
 hex = { version = "0.4.3", optional = true }
-
-# CLI
 clap = { version = "4.5.1", optional = true, features = ["derive"]}
-
 
 [dev-dependencies]
 dotenv = { version = "0.15.0"}
 
-
 [features]
-default = ["oauth", "devicecode", "cli"]
-devicecode = ["dep:reqwest", "dep:serde", "dep:serde_json"]
-oauth = ["dep:reqwest", "dep:serde", "dep:serde_json","dep:rand", "dep:serde_urlencoded"]
+default = ["custom-auth", "cli"]
+custom-auth = ["dep:reqwest", "dep:serde", "dep:serde_json","dep:rand", "dep:serde_urlencoded"]
 minecraft-auth = ["dep:ring", "dep:hex"]
-discordrpc = []
-renew = []
-cli = ["default", "dep:clap", "minecraft-auth"]
-serde_urlencoded = ["dep:serde_urlencoded"]
+cli = ["default", "dep:clap", "custom-auth", "minecraft-auth"]
