feat: new depercated feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,4 @@ default = ["custom-auth", "cli"]
 custom-auth = ["dep:reqwest", "dep:serde", "dep:serde_json","dep:rand", "dep:serde_urlencoded"]
 minecraft-auth = ["dep:ring", "dep:hex"]
 cli = ["default", "dep:clap", "custom-auth", "minecraft-auth"]
+deperacted = []
