--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,7 +1,5 @@
-name: Weekly Test.
-on:
-    schedule:
-       - cron: '0 0 * * *'
+name: Pull Request Jobs
+on: [pull_request]
 jobs:
  test:
     runs-on: ${{ matrix.os }}
