--- a/.github/workflows/deploy-cli.yml
+++ b/.github/workflows/deploy-cli.yml
@@ -1,8 +1,7 @@
 name: Deploy to Github
 on:
  push:
-    branches:
-      - main
+    branches: [main]
 jobs:
  test:
     runs-on: ${{ matrix.os }}
