--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -1,6 +1,8 @@
-name: Pull Request Check
+name: Weekly Jobs
 on:
-    pull_request:
+    schedule:
+        - cron: '0 0 * * *'
+    workflow_dispatch:
 jobs:
  test:
     runs-on: ${{ matrix.os }}
