--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ rand = { version = "0.8.5", optional = true }
 ring = { version = "0.17.8", optional = true }
 hex = { version = "0.4.3", optional = true }
 clap = { version = "4.5.1", optional = true, features = ["derive"]}
+displaydoc = "0.2.4"
+thiserror = "1.0.58"
 
 [dev-dependencies]
 dotenv = { version = "0.15.0"}
