--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,28 +23,31 @@ bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
 pkg-fmt = "tgz"
 
 [dependencies]
-# Core dependencies
+tokio = { version = "*", features = ["rt-multi-thread", "macros", "sync"] }
 reqwest = { version = "0.11.24", features = ["json"], optional = true }
 serde = { version = "1.0.196", features = ["derive"], optional = true }
-serde_json = { version = "1.0.113", optional = true }
+clap = { version = "4.5.1", optional = true, features = ["derive"] }
 serde_urlencoded = { version = "0.7.1", optional = true }
-tokio = { version = "*", features = ["rt-multi-thread", "macros", "sync"]}
-
-# Additional dependencies
+serde_json = { version = "1.0.113", optional = true }
 base64 = { version = "0.21.7", optional = true }
-rand = { version = "0.8.5", optional = true }
 ring = { version = "0.17.8", optional = true }
+rand = { version = "0.8.5", optional = true }
 hex = { version = "0.4.3", optional = true }
-clap = { version = "4.5.1", optional = true, features = ["derive"]}
 displaydoc = "0.2.4"
 thiserror = "1.0.58"
 
 [dev-dependencies]
-dotenv = { version = "0.15.0"}
+dotenv = { version = "0.15.0" }
 
 [features]
 default = ["custom-auth", "cli"]
-custom-auth = ["dep:reqwest", "dep:serde", "dep:serde_json","dep:rand", "dep:serde_urlencoded"]
+custom-auth = [
+    "dep:reqwest",
+    "dep:serde",
+    "dep:serde_json",
+    "dep:rand",
+    "dep:serde_urlencoded",
+]
 minecraft-auth = ["dep:ring", "dep:hex"]
 cli = ["default", "dep:clap", "custom-auth", "minecraft-auth"]
 deperacted = []
