--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,13 +23,13 @@ bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
 pkg-fmt = "tgz"
 
 [dependencies]
-tokio = { version = "*", features = ["rt-multi-thread", "macros", "sync"] }
-reqwest = { version = "0.11.24", features = ["json"], optional = true }
-serde = { version = "1.0.196", features = ["derive"], optional = true }
-clap = { version = "4.5.1", optional = true, features = ["derive"] }
+tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "sync"] }
+reqwest = { version = "0.12.4", features = ["json"], optional = true }
+serde = { version = "1.0.198", features = ["derive"], optional = true }
+clap = { version = "4.5.4", optional = true, features = ["derive"] }
 serde_urlencoded = { version = "0.7.1", optional = true }
-serde_json = { version = "1.0.113", optional = true }
-base64 = { version = "0.21.7", optional = true }
+serde_json = { version = "1.0.116", optional = true }
+base64 = { version = "0.22.0", optional = true }
 ring = { version = "0.17.8", optional = true }
 rand = { version = "0.8.5", optional = true }
 hex = { version = "0.4.3", optional = true }
