--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ rand = { version = "0.8.5", optional = true }
 hex = { version = "0.4.3", optional = true }
 displaydoc = "0.2.4"
 thiserror = "1.0.58"
+url = "2.5.0"
 
 [dev-dependencies]
 dotenv = { version = "0.15.0" }
