--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,9 +33,9 @@ base64 = { version = "0.22.0", optional = true }
 ring = { version = "0.17.8", optional = true }
 rand = { version = "0.8.5", optional = true }
 hex = { version = "0.4.3", optional = true }
+url = { version = "2.5.0", optional = true}
 displaydoc = "0.2.4"
 thiserror = "1.0.58"
-url = "2.5.0"
 
 [dev-dependencies]
 dotenv = { version = "0.15.0" }
@@ -48,6 +48,7 @@ custom-auth = [
     "dep:reqwest",
     "dep:serde",
     "dep:rand",
+    "dep:url"
 ]
 custom-launch = []
 minecraft-auth = ["dep:ring", "dep:hex"]
