--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "rust-analyzer.cargo.features": ["default"],
     "biome.enabled": false,
+    "cSpell.ignorePaths": [
+        "src/**/*"
+    ]
 }
