--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ pkg-fmt = "tgz"
 [dependencies]
 tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "sync"] }
 reqwest = { version = "0.12.4", features = ["json"], optional = true }
-serde = { version = "1.0.198", features = ["derive"], optional = true }
+serde = { version = "1.0.199", features = ["derive"], optional = true }
 clap = { version = "4.5.4", optional = true, features = ["derive"] }
 serde_urlencoded = { version = "0.7.1", optional = true }
 serde_json = { version = "1.0.116", optional = true }
@@ -35,7 +35,7 @@ rand = { version = "0.8.5", optional = true }
 hex = { version = "0.4.3", optional = true }
 url = { version = "2.5.0", optional = true}
 displaydoc = "0.2.4"
-thiserror = "1.0.58"
+thiserror = "1.0.59"
 
 [dev-dependencies]
 dotenv = { version = "0.15.0" }
@@ -54,3 +54,4 @@ custom-launch = []
 minecraft-auth = ["dep:ring", "dep:hex"]
 cli = ["default", "dep:clap", "custom-auth", "minecraft-auth", "custom-launch"]
 deperacted = []
+tauri = []
