--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "minecraft-essentials"
-version = "0.2.12"
+version = "0.2.13"
 keywords = ["Minecraft", "MinecraftClient"]
 authors = ["Eveeifyeve <eveeg1971@gmail.com>"]
 description = "A Package that gives all Minecraft client launchers essentials."
@@ -24,7 +24,7 @@ pkg-fmt = "tgz"
 
 [dependencies]
 tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "sync"] }
-reqwest = { version = "0.12.4", features = ["json"], optional = true }
+reqwest = { version = "0.12.4", features = ["json"] }
 serde = { version = "1.0.199", features = ["derive"], optional = true }
 clap = { version = "4.5.4", optional = true, features = ["derive"] }
 serde_urlencoded = { version = "0.7.1", optional = true }
@@ -33,25 +33,22 @@ base64 = { version = "0.22.0", optional = true }
 ring = { version = "0.17.8", optional = true }
 rand = { version = "0.8.5", optional = true }
 hex = { version = "0.4.3", optional = true }
-url = { version = "2.5.0", optional = true}
+url = { version = "2.5.0", optional = true }
 displaydoc = "0.2.4"
 thiserror = "1.0.59"
+bytes = "1.6.0"
+sha-1 = "0.10.1"
 
 [dev-dependencies]
 dotenv = { version = "0.15.0" }
 
 [features]
-default = ["custom-auth", "custom-launch", "cli"]
-custom-auth = [
+default = ["auth", "cli"]
+auth = [
     "dep:serde_urlencoded",
     "dep:serde_json",
-    "dep:reqwest",
     "dep:serde",
     "dep:rand",
-    "dep:url"
+    "dep:url",
 ]
-custom-launch = []
-minecraft-auth = ["dep:ring", "dep:hex"]
-cli = ["default", "dep:clap", "custom-auth", "minecraft-auth", "custom-launch"]
-deperacted = []
-tauri = []
+cli = ["dep:clap", "auth"]
