--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,12 @@ pkg-url = "{ repo }/releases/download/v{ version }/{ name }-cli"
 bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
 pkg-fmt = "tgz"
 
+[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
+pkg-fmt = "zip"
+
+[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
+pkg-fmt = "zip"
+
 [dependencies]
 tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "sync"] }
 reqwest = { version = "0.12.4", features = ["json"], optional = true }
