feat: launch init

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ sha-1 = "0.10.1"
 dotenv = { version = "0.15.0" }
 
 [features]
-default = ["auth", "cli"]
+default = ["auth", "cli", "launch"]
 auth = [
     "dep:serde_urlencoded",
     "dep:serde_json",
