--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "minecraft-essentials"
 version = "0.2.12"
 keywords = ["Minecraft", "MinecraftClient"]
 authors = ["Eveeifyeve <eveeg1971@gmail.com>"]
-description = "A Package that gives all Minecraft client launchers essentials."
+description = "A Library that gives all Minecraft Modpack developers essentials."
 homepage = "https://minecraft-essentials.github.io"
 repository = "https://github.com/minecraft-essentials/minecraft-essentials"
 documentation = "https://docs.rs/minecraft-essentials"
