--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "minecraft-essentials"
 version = "0.2.12"
-keywords = ["Minecraft", "MinecraftClient"]
+keywords = ["Minecraft", "MinecraftModpack", "Essentials"]
 authors = ["Eveeifyeve <eveeg1971@gmail.com>"]
 description = "A Library that gives all Minecraft Modpack developers essentials."
 homepage = "https://minecraft-essentials.github.io"
