feat: modrinth init

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ sha-1 = "0.10.1"
 dotenv = { version = "0.15.0" }
 
 [features]
-default = ["auth", "cli", "launch"]
+default = ["auth", "cli", "launch", "modrinth"]
 auth = [
     "dep:serde_urlencoded",
     "dep:serde_json",
@@ -58,6 +58,7 @@ auth = [
     "dep:rand",
     "dep:url",
 ]
+modrinth = ["dep:reqwest"]
 refresh = ["auth"]
 launch = ["dep:serde_json", "dep:serde", "dep:reqwest"]
 cli = ["dep:clap", "auth"]
