feat: modrinth get project

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 Client_ID= "Azure Client ID"
 Client_Secret= "Azure Client Secret"
+CurseForge_APIKey = "CurseForge API Key"
+Github_AccessToken = "Github Access Token"
