--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-  "rust-analyzer.cargo.features": ["default"],
-  "biome.enabled": false,
-  "cSpell.ignorePaths": ["src/**/*"]
+  "rust-analyzer.cargo.features": [
+    "default"
+  ],
+  "cSpell.ignorePaths": [
+    "src/**/*"
+  ]
 }
