--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ on:
     push:
     pull_request:
     workflow_dispatch:
+    schedule:
+        - cron: '0 0 * * 0'
 
 permissions:
   contents: write
